# optimize-electricity

./: README.md  about.html  blog.html  detect_dataset.csv  extra_trees_model.sav  index.html  initalize_one_model.py  main.py  prcoess_frames.py  process_frames.py  pyproject.toml  requirements.txt  service.html
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
templates/: about.html  fault_detection.html  index.html  person_detection.html  service.html  video.html
