[tool.poetry]
name = "optimize-electricity"
version = "0.1.0"
description = "This is the app for electricity"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
